# Small-Projects

./: .gitignore  README.md
C and C++/Competitive Programming/: README.md
C and C++/Cross The Road/: Cross The Road.layout  README.md  main.cpp
C and C++/Electra/: Counter.ec  Hello World.ec  README.md
C and C++/Electra-Legacy/: README.md  electra.txt
C and C++/Gezgin/: README.md  run86.sh
C and C++/HTML Builder/: source.html  src.html
C and C++/Labirent 2/: Labirent_2_private.h  README.md
CodeGuessing/: README.md
CodeGuessing/CG62/: subsed.cabal
CodeGuessing/CG62/app/: CommandParser.hs  Main.hs  Program.hs
Cross The Road/: README.md  game.hpp
Electra-Legacy/: InfiniteLoop.ec  Truth Machine.ec
Gezgin/: Makefile  README.md  run64.sh
HTML Builder/: Makefile  README.md  test.txt
Labirent/: Level1.lvl  Level12.lvl  Level17.lvl  Level18.lvl  Level4.lvl
Labirent 2/: Labirent 2.dev  README.md  main.cpp  resources.rc
MandelbrotSet/: README.md
Notepad+/: Notepad+.py
OpenGL Minecraft/: Makefile.win  README.md  main.cpp
Reddit Bot/: README.md  minesweeper_bot.py
Saat/: Makefile.win  Saat.dev  Saat.layout  main.cpp
Shopping App/: shopping_app.pyw
Small Pyton Codes/: 6174.py  boy_kutle_indexi.py  christmas_tree.py  draw_e.py  eulers_formula.py  near_logarithm.py  near_squareroot.py  ortalama alıcı.py  quiz_app.py  random_move.py  sayi_tahmin.py  speller.py  sudoku_solver.py  tahmin_edici.py
Son dakika/: son_dakika.py
Tarih Oyunu/: run64.sh  run86.sh
Thanos Project/: create.cpp
colored keyboard/: Makefile.win  main.cpp
(+296 files in other folders)
