cabal-version:      3.0
name:               subsed
version:            0.1.0.0
description:        A subset of ed
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable subsed
    import:           warnings
    main-is:          Main.hs
    other-modules:    CommandParser
                    , Program
    build-depends:    base ^>=4.17.2.1
                    , mtl ^>= 2.2.2
                    , transformers ^>= 0.5.6.2
                    , directory ^>= 1.3.7.1
    hs-source-dirs:   app
    default-language: GHC2021
